--- a/src/pages/ecosostenibilitat.html
+++ b/src/pages/ecosostenibilitat.html
@@ -4,54 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecosostenibilitat</title>
-    <link rel="stylesheet" href="/src/css/main.css" />
+    <link rel="stylesheet" href="/src/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="bg-gray-100">
-    <div class="bg-tertiary text-center py-4 relative">
-        <a href="paginaRedireccions.html" class="absolute top-4 left-4 text-lime-200 text-2xl">
+<body class="bg-primary min-h-screen text-gray-800">
+    <!-- Header Section -->
+    <header class="bg-tertiary text-center py-6 relative rounded-b-3xl shadow-lg">
+        <a href="paginaRedireccions.html" class="absolute top-4 left-4 text-secondary1 text-3xl" aria-label="Regresar">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <!-- Main Title (side-to-side, top of the page) -->
-        <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold text-lime-200">Ecosostenibilitat</h1>
-    </div>
-    <!-- Pantalla 1 -->
-    <div class="max-w-md mx-auto bg-white rounded-lg shadow-md mt-10">
-        <div class="p-4">
-            <h2 class="text-lg font-semibold text-gray-700">Definició</h2>
-            <p class="mt-2 text-gray-600">
-                L'ecosostenibilitat, també coneguda com a sostenibilitat ambiental, fa referència a un model de desenvolupament que busca satisfer les necessitats de les generacions presents sense comprometre la capacitat de les futures per satisfer les seves pròpies necessitats. Aquest concepte sorgeix com una resposta a la creixent preocupació pels efectes negatius de les activitats humanes sobre el medi ambient i la necessitat de protegir els recursos naturals.
-            </p>
-        </div>
-    </div>
+        <h1 class="text-5xl font-bold text-secondary1" style="font-family: 'Comic Sans MS', sans-serif;">Ecosostenibilitat</h1>
+    </header>
 
-    <!-- Pantalla 2 -->
-    <div class="max-w-md mx-auto bg-white rounded-lg shadow-md mt-10">
-        <div class="p-4">
-            <h2 class="text-lg font-semibold text-gray-700">Principis clau</h2>
-            <p class="mt-2 text-gray-600">
-                Reducció de l'impacte ambiental: Promoure accions que minimitzin l'impacte negatiu de l'activitat humana sobre l'entorn. Això inclou la reducció de la contaminació, la preservació de la biodiversitat i la mitigació del canvi climàtic.
-            </p>
-            <p class="mt-4 text-gray-600">
-                Ús eficient dels recursos naturals: Optimitzar l'ús de recursos com l'aigua, l'energia, el sòl i els materials, per evitar-ne el malbaratament i promoure l'ús d'energies renovables.
-            </p>
-        </div>
-    </div>
+    <!-- Pantalla 1 - Definició -->
+    <section class="max-w-lg mx-auto bg-white rounded-xl shadow-md mt-10 p-6">
+        <h2 class="text-2xl font-semibold text-tertiary mb-4 flex items-center">
+            <i class="fas fa-leaf mr-2 text-blue500"></i> Definició
+        </h2>
+        <p class="text-lg text-gray leading-relaxed">
+            L'ecosostenibilitat, també coneguda com a sostenibilitat ambiental, fa referència a un model de desenvolupament
+            que busca satisfer les necessitats de les generacions presents sense comprometre les futures.
+            Aquest concepte sorgeix com una resposta a la creixent preocupació pels efectes negatius de les activitats
+            humanes sobre el medi ambient i la necessitat de protegir els recursos naturals.
+        </p>
+    </section>
 
-    <!-- Pantalla 3 -->
-    <div class="max-w-md mx-auto bg-white rounded-lg shadow-md mt-10">
-        <div class="p-4">
-            <p class="mt-2 text-gray-600">
-                Cicle de vida dels productes: Enfocar-se en el disseny de productes i serveis que redueixin l'impacte ambiental al llarg del seu cicle de vida, des de l'extracció de matèries primeres fins a la seva disposició final o reciclatge.
-            </p>
+    <!-- Pantalla 2 - Principis Clau -->
+    <section class="max-w-lg mx-auto bg-white rounded-xl shadow-md mt-10 p-6">
+        <h2 class="text-2xl font-semibold text-tertiary mb-4 flex items-center">
+            <i class="fas fa-recycle mr-2 text-blue500"></i> Principis clau
+        </h2>
+        <p class="text-lg text-gray leading-relaxed mb-4">
+            <strong>Reducció de l'impacte ambiental:</strong> Promoure accions que minimitzin l'impacte negatiu de l'activitat
+            humana sobre l'entorn, incloent la reducció de la contaminació, preservació de la biodiversitat i mitigació
+            del canvi climàtic.
+        </p>
+        <p class="text-lg text-gray leading-relaxed">
+            <strong>Ús eficient dels recursos naturals:</strong> Optimitzar l'ús de recursos com l'aigua, l'energia,
+            el sòl i els materials, promovent l'ús d'energies renovables.
+        </p>
+    </section>
+
+    <!-- Pantalla 3 - Cicle de Vida dels Productes -->
+    <section class="max-w-lg mx-auto bg-white rounded-xl shadow-md mt-10 p-6">
+        <h2 class="text-2xl font-semibold text-tertiary mb-4 flex items-center">
+            <i class="fas fa-seedling mr-2 text-blue500"></i> Cicle de vida dels productes
+        </h2>
+        <p class="text-lg text-gray leading-relaxed">
+            Enfocar-se en el disseny de productes i serveis que redueixin l'impacte ambiental al llarg del seu cicle de
+            vida, des de l'extracció de matèries primeres fins a la seva disposició final o reciclatge.
+        </p>
+    </section>
+
+    <!-- Recursos Extra -->
+    <section class="max-w-lg mx-auto bg-white rounded-xl shadow-md mt-10 p-6">
+        <h2 class="text-2xl font-semibold text-tertiary mb-4 flex items-center">
+            <i class="fas fa-book-open mr-2 text-blue500"></i> Recursos Extra
+        </h2>
+        <div class="space-y-4">
+            <a href="./consellsEco.html" class="block bg-blue500 text-white text-center py-3 rounded-full font-semibold shadow-lg">
+                Consells Eco
+            </a>
+            <a href="./chat.html" class="block bg-gray-200 text-tertiary text-center py-3 rounded-full font-semibold shadow-lg">
+                Chat
+            </a>
         </div>
-        <div class="p-4">
-            <h2 class="text-lg font-semibold text-gray-700">Recursos Extra</h2>
-            <div class="mt-4">
-                <button class="bg-blue-500 text-white px-4 py-2 rounded-full w-full mb-3"><a href="./consellsEco.html">Consells Eco </a></button>
-                <button class="bg-gray-200 text-gray-700 px-4 py-2 rounded-full w-full"><a href="./chat.html">Chat </a></button>
-            </div>
-        </div>
-    </div>
+    </section>
 </body>
 </html>
