--- a/src/pages/infoApp.html
+++ b/src/pages/infoApp.html
@@ -5,36 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InfoApp</title>
-    <link rel="stylesheet" href="/src/css/main.css" />
+    <link rel="stylesheet" href="/src/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 
-<body class="bg-primary min-h-screen">
-    <div class="bg-tertiary text-center py-4 relative">
-        <a href="paginaRedireccions.html" class="absolute top-4 left-4 text-lime-200 text-2xl">
+<body class="bg-primary min-h-screen text-gray-800">
+    <!-- Header Section -->
+    <div class="bg-tertiary text-center py-6 relative rounded-b-3xl shadow-lg">
+        <a href="paginaRedireccions.html" class="absolute top-4 left-4 text-secondary1 text-3xl" aria-label="Regresar">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <!-- Main Title (side-to-side, top of the page) -->
-        <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold text-lime-200">InfoApp</h1>
+        <h1 class="text-5xl font-bold text-secondary1" style="font-family: 'Comic Sans MS', sans-serif;">InfoApp</h1>
     </div>
 
-    <div class="p-6 space-y-4">
-        <!-- Mamífers -->
-        <div class="bg-secondary2 p-4 rounded-lg text-left">
-            <h1 class="text-3xl font-semibold">Que Es</h1>
+    <!-- Main Content Section -->
+    <div class="p-8 space-y-8">
+        <!-- Section: Que Es -->
+        <div class="bg-secondary2 p-6 rounded-lg shadow-md">
+            <h2 class="text-3xl font-semibold text-tertiary flex items-center">
+                <i class="fas fa-info-circle text-xl text-blue500 mr-3"></i> ¿Qué es InfoApp?
+            </h2>
+            <p class="mt-4 text-lg text-negre leading-relaxed">
+                InfoApp és una plataforma educativa que proporciona informació sobre la biodiversitat del planeta,
+                centrant-se en la vida animal, vegetal i els hàbits ecosostenibles. Dissenyada per ser accessible i
+                atractiva, la nostra web és un recurs integral tant per als més petits com per a adults interessats a
+                aprendre sobre la natura i com protegir el medi ambient. A través de seccions interactives i un
+                enfocament lúdic, busquem fomentar el coneixement i el respecte pel món natural.
+            </p>
         </div>
 
-        <div class="ml-20 mr-10 bg-secondary2 rounded-lg text-left">
-            <p class="text-lg">InfoApp és una plataforma educativa que proporciona informació sobre la biodiversitat del planeta, centrant-se en la vida animal, vegetal i els hàbits ecosostenibles. Dissenyada per ser accessible i atractiva, la nostra web és un recurs integral tant per als més petits com per a adults interessats a aprendre sobre la natura i com protegir el medi ambient. A través de seccions interactives i un enfocament lúdic, busquem fomentar el coneixement i el respecte pel món natural.</p>
-        </div>
-
-        <div class="bg-secondary2 p-4 rounded-lg text-left">
-            <h1 class="text-3xl font-semibold">Objectius</h1>
-        </div>
-
-        <div class="ml-20 mr-10 bg-secondary2 p-4 rounded-lg text-left">
-            <h1 class="text-lg">El nostre objectiu principal és educar les noves generacions sobre la importància de cuidar el medi ambient i preservar la biodiversitat. A través de la nostra secció de trivia, incentivem als nens i joves a aprendre de manera divertida, mentre que el fòrum fomenta la participació activa d'usuaris que comparteixen idees sobre com viure de manera més sostenible. InfoApp també pretén ser una plataforma que inspiri la creació de comunitats dedicades a l'acció climàtica i a la conservació de la natura.</h1>
+        <!-- Section: Objectius -->
+        <div class="bg-secondary2 p-6 rounded-lg shadow-md">
+            <h2 class="text-3xl font-semibold text-tertiary flex items-center">
+                <i class="fas fa-bullseye text-xl text-blue500 mr-3"></i> Objectius
+            </h2>
+            <p class="mt-4 text-lg text-negre leading-relaxed">
+                El nostre objectiu principal és educar les noves generacions sobre la importància de cuidar el medi
+                ambient i preservar la biodiversitat. A través de la nostra secció de trivia, incentivem als nens i
+                joves a aprendre de manera divertida, mentre que el fòrum fomenta la participació activa d'usuaris que
+                comparteixen idees sobre com viure de manera més sostenible. InfoApp també pretén ser una plataforma que
+                inspiri la creació de comunitats dedicades a l'acció climàtica i a la conservació de la natura.
+            </p>
         </div>
     </div>
 </body>
