--- a/src/pages/infoEspecimen/arçSiberia.html
+++ b/src/pages/infoEspecimen/arçSiberia.html
@@ -5,50 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arç Groc de Sibèria</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/arbustos.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/arbustos.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de arbustos">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Arç Groc de Sibèria</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Arç Groc de Sibèria</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
-        <!-- Imatge de l'arbre -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Hippophae_rhamnoides-01_%28xndr%29.JPG/356px-Hippophae_rhamnoides-01_%28xndr%29.JPG" alt="Arç Groc de Sibèria" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Hippophae_rhamnoides-01_%28xndr%29.JPG/356px-Hippophae_rhamnoides-01_%28xndr%29.JPG" alt="Arç Groc de Sibèria" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
-        <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>L'arç groc de Sibèria (Syringa vulgaris) és un arbust decoratiu molt apreciat pels seus abundants i fragants flors que apareixen a la primavera. Les seves flors poden ser de diversos colors, incloent el blanc, rosa i lila, i són molt atractives per als pol·linitzadors.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-flower mr-2 text-gray-600"></i>L'arç groc de Sibèria (Syringa vulgaris) és un arbust decoratiu molt apreciat pels seus abundants i fragants flors que apareixen a la primavera. Les seves flors poden ser de diversos colors, incloent el blanc, rosa i lila, i són molt atractives per als pol·linitzadors.</p>
+        </section>
 
-        <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>L'arç groc de Sibèria és originari d'Europa i Àsia, i es caracteritza per la seva capacitat d'adaptar-se a diferents tipus de sòl. Aquest arbust pot arribar a una altura d'entre 1,5 a 3 metres i és popular en jardineria per la seva bellesa i aroma.</p>
-        </div>
+        </section>
 
-        <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Syringa_vulgaris_distribution_map.png/800px-Syringa_vulgaris_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Syringa_vulgaris_distribution_map.png/800px-Syringa_vulgaris_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
-        <!-- Ús i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Ús i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Ús i Importància</h2>
             <p>A més de la seva bellesa ornamental, les flors de l'arç groc de Sibèria es poden utilitzar en la confecció de perfums i olis essencials. També s'ha utilitzat tradicionalment en la medicina popular per les seves propietats antiinflamatòries.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
