--- a/src/pages/infoEspecimen/camaleoPigmeo.html
+++ b/src/pages/infoEspecimen/camaleoPigmeo.html
@@ -5,51 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camaleó Pigmeu</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/reptils.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/reptils.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de rèptils">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Camaleó Pigmeu</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Camaleó Pigmeu</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
-        <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Rhampholeon_temporalis.png" alt="Camaleó Pigmeu" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Rhampholeon_temporalis.png" alt="Camaleó Pigmeu" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
-        <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El camaleó pigmeu és una de les espècies més petites de camaleó del món, destacant per la seva habilitat per canviar de color. Aquest petit rèptil és conegut pel seu aspecte encantador i la seva naturalesa tímida.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-reptile mr-2 text-gray-600"></i>El camaleó pigmeu és una de les espècies més petites de camaleó del món, destacant per la seva habilitat per canviar de color. Aquest petit rèptil és conegut pel seu aspecte encantador i la seva naturalesa tímida.</p>
+        </section>
 
-        <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Originari de Madagascar, el camaleó pigmeu habita en boscos humits i àrees vegetals denses. Aquests animals són nocturns i es passen la major part del temps asseguts sobre les branques, on utilitzen el seu camuflatge per protegir-se dels depredadors.</p>
-        </div>
+        </section>
 
-        <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Distribution_map_of_Rhampholeon_brevicaudatus.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Distribution_map_of_Rhampholeon_brevicaudatus.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
-        <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-utensils mr-2 text-gray-600"></i>Dieta</h2>
             <p>El camaleó pigmeu és insectívor i s'alimenta principalment d'insectes petits com mosques, grills i altres invertebrats que atrapa amb la seva llengua llarga i adhesiva.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
