--- a/src/pages/infoEspecimen/dMilenari.html
+++ b/src/pages/infoEspecimen/dMilenari.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drago mil·lenari</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/arbres.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/arbres.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de árboles">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Drago mil·lenari</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Drago mil·lenari</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'arbre -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Drago_milenario%2C_Icod_de_los_Vinos%2C_Tenerife%2C_Espa%C3%B1a%2C_2012-12-13%2C_DD_01.jpg/360px-Drago_milenario%2C_Icod_de_los_Vinos%2C_Tenerife%2C_Espa%C3%B1a%2C_2012-12-13%2C_DD_01.jpg" alt="Drago mil·lenari" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Drago_milenario%2C_Icod_de_los_Vinos%2C_Tenerife%2C_Espa%C3%B1a%2C_2012-12-13%2C_DD_01.jpg/360px-Drago_milenario%2C_Icod_de_los_Vinos%2C_Tenerife%2C_Espa%C3%B1a%2C_2012-12-13%2C_DD_01.jpg" alt="Drago mil·lenari" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El drago mil·lenari (Dracaena draco) és un arbre emblemàtic originari de les Illes Canàries, Madeira i el nord-oest d'Àfrica. Aquest arbre és conegut per la seva forma peculiar, amb un tronco robust i fulles en forma de espasa que s'agrupen a la part superior.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-tree mr-2 text-gray-600"></i>El drago mil·lenari (Dracaena draco) és un arbre emblemàtic originari de les Illes Canàries, Madeira i el nord-oest d'Àfrica. Aquest arbre és conegut per la seva forma peculiar, amb un tronco robust i fulles en forma de espasa que s'agrupen a la part superior.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>El drago mil·lenari pot viure milers d'anys i és conegut per la seva resina, que es coneix com a "sang de drac", utilitzada en tradicions medicinals i artesanals. A més, el seu aspecte majestuós el converteix en un símbol de força i longevitat.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Distribution_map_of_Dracaena_draco.png/800px-Distribution_map_of_Dracaena_draco.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Distribution_map_of_Dracaena_draco.png/800px-Distribution_map_of_Dracaena_draco.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Ús i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Ús i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-briefcase mr-2 text-gray-600"></i>Ús i Importància</h2>
             <p>A més del seu valor ornamental, el drago mil·lenari té un paper important en la cultura local. La seva resina ha estat utilitzada en la fabricació de pintures i tintes, i es considera que té propietats medicinals.</p>
-        </div>
-    </div>
+        </section>
+        
+    </main>
+
 </body>
 </html>
