--- a/src/pages/infoEspecimen/fCadaber.html
+++ b/src/pages/infoEspecimen/fCadaber.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arbusto Flor Cadàver</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/arbustos.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/arbustos.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de arbustos">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Arbusto Flor Cadàver</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Arbusto Flor Cadàver</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la flor -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c0/Titan-arum1web.jpg/375px-Titan-arum1web.jpg" alt="Arbusto Flor Cadàver" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c0/Titan-arum1web.jpg/375px-Titan-arum1web.jpg" alt="Arbusto Flor Cadàver" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>L'arbust flor cadàver (Rafflesia arnoldii) és coneguda per tenir la flor més gran del món, que pot arribar a mesurar fins a 1 metre de diàmetre. Aquesta planta és paràsita i no té fulles ni tiges, depenent completament de la planta hoste per sobreviure.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>L'arbust flor cadàver (<i>Rafflesia arnoldii</i>) és coneguda per tenir la flor més gran del món, que pot arribar a mesurar fins a 1 metre de diàmetre. Aquesta planta és paràsita i no té fulles ni tiges, depenent completament de la planta hoste per sobreviure.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Rafflesia arnoldii és originària de les selves tropicals d'Indonèsia i es caracteritza per la seva olor desagradable, que s'assembla a la carn en descomposició. Aquesta aroma atreu insectes pol·linitzadors, que ajuden a la seva reproducció.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Rafflesia_arnoldii_Distribution_Map.png/800px-Rafflesia_arnoldii_Distribution_Map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Rafflesia_arnoldii_Distribution_Map.png/800px-Rafflesia_arnoldii_Distribution_Map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Ús i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Ús i Importància</h2>
-            <p>A pesar de la seva olor poc atractiva, Rafflesia arnoldii és considerada un símbol de biodiversitat i és objecte d'estudi per la seva adaptació única al medi ambient. A més, té un paper important en la cultura local i l'ecoturisme.</p>
-        </div>
-    </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Ús i Importància</h2>
+            <p>A pesar de la seva olor poc atractiva, <i>Rafflesia arnoldii</i> és considerada un símbol de biodiversitat i és objecte d'estudi per la seva adaptació única al medi ambient. A més, té un paper important en la cultura local i l'ecoturisme.</p>
+        </section>
+
+    </main>
+
 </body>
 </html>
