--- a/src/pages/infoEspecimen/florPassio.html
+++ b/src/pages/infoEspecimen/florPassio.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flor de la Passió</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/herbes.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/herbes.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de herbes">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Flor de la Passió</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Flor de la Passió</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Passiflora_creulea_fax01.JPG/375px-Passiflora_creulea_fax01.JPG" alt="Flor de la Passió" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Passiflora_creulea_fax01.JPG/375px-Passiflora_creulea_fax01.JPG" alt="Flor de la Passió" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La Flor de la Passió (*Passiflora edulis*) és una planta trepadora famosa per les seves espectaculars flors i els seus fruits dolços i aromàtics, coneguts com a "maracujà". És originària de Sud-amèrica, però actualment es cultiva en moltes parts del món.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La Flor de la Passió (*Passiflora edulis*) és una planta trepadora famosa per les seves espectaculars flors i els seus fruits dolços i aromàtics, coneguts com a "maracujà". És originària de Sud-amèrica, però actualment es cultiva en moltes parts del món.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Les flors de la Passiflora edulis són distintives, amb un disseny intricat i colors vius que poden incloure blanc, morat i blau. Aquesta planta pot arribar a una altura de fins a 6 metres. El seu fruit, el maracujà, és molt apreciat per la seva polpa suculenta i la seva alta concentració de vitamines i antioxidants.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Passiflora_edulis_distribution_map.png/800px-Passiflora_edulis_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Passiflora_edulis_distribution_map.png/800px-Passiflora_edulis_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Ús i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Ús i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Ús i Importància</h2>
             <p>A més de ser un ingredient popular en sucs i postres, la flor de la passió també s'utilitza en la medicina tradicional per les seves propietats sedants i anxiolítiques. La planta és valorada tant per la seva bellesa ornamental com pels seus fruits nutritius.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
