--- a/src/pages/infoEspecimen/florPipa.html
+++ b/src/pages/infoEspecimen/florPipa.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flor de Pipa Gigante</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/pTrepadores.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/pTrepadores.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de trepadores">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Flor de Pipa Gigante</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Flor de Pipa Gigante</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Aristolochia_gigantea10-2.jpg/375px-Aristolochia_gigantea10-2.jpg" alt="Flor de Pipa Gigante" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Aristolochia_gigantea10-2.jpg/375px-Aristolochia_gigantea10-2.jpg" alt="Flor de Pipa Gigante" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La *Flor de Pipa Gigante* (*Aristolochia gigantea*) és una planta trepadora exòtica originària de les selves tropicals del Brasil. Destaca per les seves flors grans i peculiars, que tenen una forma semblant a una pipa i presenten un color marró fosc amb taques grogues.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La *Flor de Pipa Gigante* (*Aristolochia gigantea*) és una planta trepadora exòtica originària de les selves tropicals del Brasil. Destaca per les seves flors grans i peculiars, que tenen una forma semblant a una pipa i presenten un color marró fosc amb taques grogues.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Les flors de la *Flor de Pipa Gigante* poden arribar a mesurar fins a 30 centímetres de llargada i estan adaptades per a la pol·linització per insectes. Aquesta planta prospera en entorns càlids i humits, i és ideal per a jardins tropicals i hivernacles.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Distribution_of_Aristolochia_gigantea.png/800px-Distribution_of_Aristolochia_gigantea.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Distribution_of_Aristolochia_gigantea.png/800px-Distribution_of_Aristolochia_gigantea.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Cura i Importància</h2>
             <p>La *Flor de Pipa Gigante* necessita molta llum indirecta, humitat elevada i un sòl ben drenat. Aquesta planta és molt valorada en jardins botànics per la seva bellesa inusual i raritat. És important mantenir-la en un ambient càlid i evitar les gelades.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
