--- a/src/pages/infoEspecimen/gallipato.html
+++ b/src/pages/infoEspecimen/gallipato.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallipato</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/anfibis.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/anfibis.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de anfibios">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Gallipato</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Gallipato</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://mediambient.gencat.cat/web/.content/home/ambits_dactuacio/patrimoni_natural/fauna_salvatge_autoctona/gestio-especies/amfibis/pleurodeles_waltl/ofegabous-1.png_1069589618.png" alt="Gallipato" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://mediambient.gencat.cat/web/.content/home/ambits_dactuacio/patrimoni_natural/fauna_salvatge_autoctona/gestio-especies/amfibis/pleurodeles_waltl/ofegabous-1.png_1069589618.png" alt="Gallipato" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El gallipato és un amfibi de la família dels urodels, conegut per la seva capacitat de regenerar parts del seu cos i per la seva adaptabilitat a diversos hàbitats. Una característica destacada d'aquesta espècie és la seva estructura costal única.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El gallipato és un amfibi de la família dels urodels, conegut per la seva capacitat de regenerar parts del seu cos i per la seva adaptabilitat a diversos hàbitats. Una característica destacada d'aquesta espècie és la seva estructura costal única.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>El gallipato és originari de la península ibèrica i del nord d'Àfrica. Aquests animals poden viure tant en ambients aquàtics com terrestres, i són especialment actius durant la nit. Les seves costelles són flexibles i poden expandir-se, la qual cosa els permet respirar millor sota l'aigua i adaptar-se a diferents condicions.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Location_Pleurodeles_waltl.png/800px-Location_Pleurodeles_waltl.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Location_Pleurodeles_waltl.png/800px-Location_Pleurodeles_waltl.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-utensils mr-2 text-gray-600"></i>Dieta</h2>
             <p>El gallipato és carnívor i s'alimenta principalment d'insectes, cucs i altres invertebrats que troba al seu entorn.</p>
-        </div>
-    </div>
+        </section>
+        
+    </main>
+
 </body>
 </html>
