--- a/src/pages/infoEspecimen/heliamphora.html
+++ b/src/pages/infoEspecimen/heliamphora.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heliamphora</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/pInsectivores.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/pInsectivores.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de insectívoras">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Heliamphora</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Heliamphora</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/H_chimantensis2.jpg/375px-H_chimantensis2.jpg" alt="Heliamphora" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/H_chimantensis2.jpg/375px-H_chimantensis2.jpg" alt="Heliamphora" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>*Heliamphora* és un gènere de plantes carnívores conegudes per les seves fulles en forma de càntir, que utilitzen per capturar i digerir insectes. Aquest gènere és originari dels tepuis de Veneçuela, una regió muntanyosa amb alta humitat i poc sòl nutritiu.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>*Heliamphora* és un gènere de plantes carnívores conegudes per les seves fulles en forma de càntir, que utilitzen per capturar i digerir insectes. Aquest gènere és originari dels tepuis de Veneçuela, una regió muntanyosa amb alta humitat i poc sòl nutritiu.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Les plantes *Heliamphora* atrauen insectes amb el nèctar que produeixen les seves fulles. Un cop a dins, els insectes no poden sortir i són digerits lentament, cosa que permet a la planta obtenir nutrients en aquests sòls pobres. Les fulles en forma de càntir poden variar en color, des de verd fins a vermell intens.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Map_of_Heliamphora_distribution.png/800px-Map_of_Heliamphora_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Map_of_Heliamphora_distribution.png/800px-Map_of_Heliamphora_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Cura i Importància</h2>
             <p>Les *Heliamphora* necessiten un ambient molt humit, sòl àcid i poca llum solar directa. És una planta complexa de mantenir fora dels seus hàbitats nadius, però molt apreciada en col·leccions de plantes carnívores per la seva aparença exòtica i la seva adaptació única a entorns pobres en nutrients.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
