--- a/src/pages/infoEspecimen/monstreDeGila.html
+++ b/src/pages/infoEspecimen/monstreDeGila.html
@@ -5,52 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monstruo de Gila</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/reptils.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/reptils.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de reptiles">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Monstruo de Gila</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Monstruo de Gila</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Gila_monster2.JPG/800px-Gila_monster2.JPG" alt="Monstruo de Gila" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Gila_monster2.JPG/800px-Gila_monster2.JPG" alt="Monstruo de Gila" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El monstruo de Gila és un gran rèptil, conegut per la seva aparença distintiva amb escates grogues i negres. És un dels pocs rèptils verinosos del món, que utilitza el seu verí per defensar-se i caçar.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El monstruo de Gila és un gran rèptil, conegut per la seva aparença distintiva amb escates grogues i negres. És un dels pocs rèptils verinosos del món, que utilitza el seu verí per defensar-se i caçar.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Originari del sud-oest dels Estats Units i el nord de Mèxic, el monstruo de Gila és un animal solitari que passa la major part del seu temps amagat en toves o sota roques. El seu verí, que s'allibera a través de glàndules salivals, és utilitzat per paralitzar les seves preses, com ara rosegadors i altres petits animals.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Map_of_Heloderma_suspectum_distribution.png/800px-Map_of_Heloderma_suspectum_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Map_of_Heloderma_suspectum_distribution.png/800px-Map_of_Heloderma_suspectum_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-fish mr-2 text-gray-600"></i>Dieta</h2>
             <p>El monstruo de Gila és carnívor i s'alimenta principalment de rosegadors, ocells, ous i altres petits animals. Utilitza la seva capacitat de camuflatge per capturar les seves preses.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
