--- a/src/pages/infoEspecimen/oranguta.html
+++ b/src/pages/infoEspecimen/oranguta.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orangutà</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/mamifers.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/mamifers.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de mamíferos">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Orangutà</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Orangutà</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbKbRouYuYgHx3Dx1SCL4FzIio9cmRT9lTeA&s" alt="Orangutà" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbKbRouYuYgHx3Dx1SCL4FzIio9cmRT9lTeA&s" alt="Orangutà" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>L'orangutà és un primat arboreu, conegut pel seu color taronja i la seva intel·ligència. Es troba principalment a les selves de Borneo i Sumatra, i és un dels més propers parents dels humans.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>L'orangutà és un primat arboreu, conegut pel seu color taronja i la seva intel·ligència. Es troba principalment a les selves de Borneo i Sumatra, i és un dels més propers parents dels humans.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>L'orangutà passa la major part de la seva vida a les arbres i té una dieta principalment frugívora, alimentant-se de fruits, fulles i escorça. Les femelles cuiden dels seus petits durant uns 6-7 anys, un dels períodes de criança més llargs entre els primats.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Distribution_map_of_Orangutans.png/800px-Distribution_map_of_Orangutans.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Distribution_map_of_Orangutans.png/800px-Distribution_map_of_Orangutans.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Dieta</h2>
             <p>L'orangutà és principalment frugívor i s'alimenta de fruits, fulles, flors i, ocasionalment, insectes. La seva dieta varia segons la disponibilitat d'aliments a la seva regió.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
