--- a/src/pages/infoEspecimen/peixDracBlau.html
+++ b/src/pages/infoEspecimen/peixDracBlau.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pez Drac Blau</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/peixos.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/peixos.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de peces">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Pez Drac Blau</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Pez Drac Blau</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQIKJ75Bxmo8r_d2kVzzDG6rtv3eYGlBggHg&s" alt="Pez Drac Blau" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQIKJ75Bxmo8r_d2kVzzDG6rtv3eYGlBggHg&s" alt="Pez Drac Blau" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El peix drac blau és un petit mol·lusc marí conegut per la seva aparença espectacular i els seus colors vius. Es troba a les aigües temperades i tropicals de tot el món, i és un gran exemple de camuflatge marí.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El peix drac blau és un petit mol·lusc marí conegut per la seva aparença espectacular i els seus colors vius. Es troba a les aigües temperades i tropicals de tot el món, i és un gran exemple de camuflatge marí.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>El peix drac blau és un gènere de nudibranquis que floten a la superfície de l'aigua. Aquest animal és conegut per la seva habilitat per alimentar-se de meduses i per emmagatzemar les seves cèl·lules urticants per defensar-se dels depredadors.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Distribution_map_of_Glaucus_atlanticus.png/800px-Distribution_map_of_Glaucus_atlanticus.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Distribution_map_of_Glaucus_atlanticus.png/800px-Distribution_map_of_Glaucus_atlanticus.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Dieta</h2>
             <p>El peix drac blau és carnívor i s'alimenta principalment de meduses. Utilitza les seves capacitats per flotar i camuflar-se per apropar-se a les seves preses abans d'atacar.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
