--- a/src/pages/seleccioEspecimens/aus.html
+++ b/src/pages/seleccioEspecimens/aus.html
@@ -47,7 +47,7 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Bartgeier_Gypaetus_barbatus_front_Richard_Bartz.jpg/375px-Bartgeier_Gypaetus_barbatus_front_Richard_Bartz.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Bartgeier_Gypaetus_barbatus_front_Richard_Bartz.jpg/375px-Bartgeier_Gypaetus_barbatus_front_Richard_Bartz.jpg">Trencalòs</h2>
                 <a href="../infoEspecimen/trencalos.html">
