--- a/src/pages/seleccioEspecimens/invertebrats.html
+++ b/src/pages/seleccioEspecimens/invertebrats.html
@@ -36,7 +36,7 @@
 
         <!-- Targeta 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzicaBDdDxDNbDCyP-BydkP2BLG8byk4IJ9Q&s" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Medusa cabellera de lleó</h2>
                 <a href="../infoEspecimen/medusaCabeleraDeLleo.html">
@@ -49,7 +49,7 @@
 
         <!-- Targeta 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDOidp2r9SzcuQZOvSU-pk64UBfBUQzS6Mjw&s" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Anemones de mar</h2>
                 <a href="../infoEspecimen/anemonaDeMar.html">
