--- a/src/pages/seleccioEspecimens/peixos.html
+++ b/src/pages/seleccioEspecimens/peixos.html
@@ -24,7 +24,7 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR5XqFMJhCnQI1EPQJpTazwYMagk_Bcn1Yhisem8LI0sCgOOOt5" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Peix pedra</h2>
                 <a href="../infoEspecimen/peixPedra.html">
@@ -36,7 +36,7 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIBQy_O5n53XEMF-wV2T0XFPxYi3Ddby2nZg&s" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Peix lleó</h2>
                 <a href="../infoEspecimen/peixLleo.html">
@@ -48,7 +48,7 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQIKJ75Bxmo8r_d2kVzzDG6rtv3eYGlBggHg&s" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Peix drac blau</h2>
                 <a href="../infoEspecimen/peixDracBlau.html">
