--- a/src/pages/seleccioEspecimens/reptils.html
+++ b/src/pages/seleccioEspecimens/reptils.html
@@ -24,7 +24,7 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Gila_monster2.JPG/800px-Gila_monster2.JPG" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Monstre de Gila</h2>
                 <a href="../infoEspecimen/monstreDeGila.html">
@@ -36,7 +36,7 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Rhampholeon_temporalis.png" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Camaleó Pigmeo</h2>
                 <a href="../infoEspecimen/camaleoPigmeo.html">
@@ -48,7 +48,7 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpiYAbgMMkkdOeKeUNAi_mJyrM7nfBqnXs7g&s" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Drac de Komodo</h2>
                 <a href="../infoEspecimen/dracDeKomodo.html">
