--- a/src/pages/infoEspecimen/aAmpolla.html
+++ b/src/pages/infoEspecimen/aAmpolla.html
@@ -5,50 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arbre Ampolla</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/arbres.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/arbres.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de especímenes">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Arbre Ampolla</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Arbre Ampolla</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
-        <!-- Imatge de l'arbre -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Brachychiton_populneus_tree.jpg/415px-Brachychiton_populneus_tree.jpg" alt="Arbre Ampolla" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Brachychiton_populneus_tree.jpg/415px-Brachychiton_populneus_tree.jpg" alt="Arbre Ampolla" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
-        <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>L'arbre ampolla (Adansonia spp.) és un arbre icònic originari de Madagascar, reconegut per la seva peculiar forma de tronc ampli i arrodonit. Aquests arbres poden emmagatzemar grans quantitats d'aigua, la qual cosa els permet sobreviure en condicions àrides.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow">
+            <p class="text-lg"><i class="fas fa-tree mr-2 text-gray-600"></i>L'arbre ampolla (Adansonia spp.) és un arbre icònic originari de Madagascar, reconegut per la seva peculiar forma de tronc ampli i arrodonit. Aquests arbres poden emmagatzemar grans quantitats d'aigua, la qual cosa els permet sobreviure en condicions àrides.</p>
+        </section>
 
-        <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Hi ha diverses espècies d'arbre ampolla, i totes són conegudes per les seves característiques úniques. Els arbres ampolla poden arribar a viure més de 1.000 anys i són un símbol de la biodiversitat de Madagascar.</p>
-        </div>
+        </section>
 
-        <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Baobab_Tree_Distribution_Map.png/800px-Baobab_Tree_Distribution_Map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Baobab_Tree_Distribution_Map.png/800px-Baobab_Tree_Distribution_Map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
-        <!-- Ús i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Ús i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Ús i Importància</h2>
             <p>Les fulles, fruits i llavors de l'arbre ampolla són consumits localment i tenen valor nutricional. A més, el tronc s'ha utilitzat tradicionalment per a la construcció i com a font d'aigua en èpoques de sequera.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
