--- a/src/pages/infoEspecimen/anemonaDeMar.html
+++ b/src/pages/infoEspecimen/anemonaDeMar.html
@@ -5,51 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anémona de mar</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/invertebrats.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/invertebrats.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de invertebrados">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Anémona de mar</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Anémona de mar</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDOidp2r9SzcuQZOvSU-pk64UBfBUQzS6Mjw&s" alt="Anémona de mar" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
-        <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDOidp2r9SzcuQZOvSU-pk64UBfBUQzS6Mjw&s" alt="Anémona de mar" class="w-64 h-64 object-cover">
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-water mr-2 text-gray-600"></i>Les anèmones de mar són invertebrats marins que pertanyen a la classe dels cnidaris, conegudes pel seu aspecte colorit i la seva simetria radial.</p>
+        </section>
 
-        <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>Les anèmones de mar són invertebrats marins que pertanyen a la classe dels cnidaris, conegudes pel seu aspecte colorit i la seva simetria radial.</p>
-        </div>
-
-        <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Les anèmones de mar viuen normalment adherides a roques o fons marins i poden tenir una gran varietat de colors. Són famoses per la seva relació simbiótica amb els peixos pallassos.</p>
-        </div>
+        </section>
 
-        <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/World_map_with_corals.png/1200px-World_map_with_corals.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/World_map_with_corals.png/1200px-World_map_with_corals.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
-        <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-utensils mr-2 text-gray-600"></i>Dieta</h2>
             <p>Les anèmones de mar són carnívores i s'alimenten principalment de petits peixos, crustacis i zooplàncton que capturen amb els seus tentacles urticants.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
