--- a/src/pages/infoEspecimen/baobab.html
+++ b/src/pages/infoEspecimen/baobab.html
@@ -5,51 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baobab</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/arbres.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/arbres.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de arbres">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Baobab</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Baobab</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
-        <!-- Imatge de l'arbre -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Adansonia_grandidieri_02.jpg/675px-Adansonia_grandidieri_02.jpg" alt="Baobab" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Adansonia_grandidieri_02.jpg/675px-Adansonia_grandidieri_02.jpg" alt="Baobab" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
-        <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El baobab és un arbre emblemàtic conegut per la seva forma peculiar i la seva longevitat. Aquest arbre pot viure milers d'anys i és reconegut pels seus troncs massius que poden emmagatzemar grans quantitats d'aigua.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-tree mr-2 text-gray-600"></i>El baobab és un arbre emblemàtic conegut per la seva forma peculiar i la seva longevitat. Aquest arbre pot viure milers d'anys i és reconegut pels seus troncs massius que poden emmagatzemar grans quantitats d'aigua.</p>
+        </section>
 
-        <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>El baobab es troba principalment a les regions àrides i semiàrides d'Àfrica, Madagascar i Austràlia. Aquest arbre és un símbol de força i resiliència, amb una rica història cultural en moltes comunitats locals.</p>
-        </div>
+        </section>
 
-        <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Distribution_map_of_Baobab.png/800px-Distribution_map_of_Baobab.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Distribution_map_of_Baobab.png/800px-Distribution_map_of_Baobab.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
-        <!-- Ús i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Ús i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Ús i Importància</h2>
             <p>El baobab és apreciat no només pel seu aspecte singular, sinó també pels seus fruits i fulles, que són rics en nutrients. Les comunitats locals utilitzen diverses parts de l'arbre per fer aliments, medicaments i materials de construcció.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
