--- a/src/pages/infoEspecimen/capilera.html
+++ b/src/pages/infoEspecimen/capilera.html
@@ -5,50 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capil·lera</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/ffmh.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/ffmh.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de plantes">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Capil·lera</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Capil·lera</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
-        <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Adiantum_capillus-veneris_2601.jpg/450px-Adiantum_capillus-veneris_2601.jpg" alt="Capil·lera" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Adiantum_capillus-veneris_2601.jpg/450px-Adiantum_capillus-veneris_2601.jpg" alt="Capil·lera" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
-        <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La *Capil·lera* (*Furcraea longaeva*) és una planta suculenta de la família dels agavàcies, originària de Mèxic. És coneguda per la seva roseta de fulles llargues i gruixudes que poden arribar a medir fins a 2 metres de longitud, així com per les seves espectaculars flors que poden aparèixer en condicions òptimes.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-leaf mr-2 text-gray-600"></i>La *Capil·lera* (*Furcraea longaeva*) és una planta suculenta de la família dels agavàcies, originària de Mèxic. És coneguda per la seva roseta de fulles llargues i gruixudes que poden arribar a medir fins a 2 metres de longitud, així com per les seves espectaculars flors que poden aparèixer en condicions òptimes.</p>
+        </section>
 
-        <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>La *Capil·lera* creix en ambients secs i càlids, adaptant-se bé a les condicions àrides. La seva inflorescència és alta i pot arribar a medir fins a 5 metres, amb flors blanques i cremoses que floreixen en estius càlids. A més, és una planta de baixa manteniment, ideal per a jardins d'aigua escassa.</p>
-        </div>
+        </section>
 
-        <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/Furcraea_longaeva_distribution_map.png/800px-Furcraea_longaeva_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/Furcraea_longaeva_distribution_map.png/800px-Furcraea_longaeva_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
-        <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-water mr-2 text-gray-600"></i>Cura i Importància</h2>
             <p>La *Capil·lera* requereix poc manteniment, només necessitant sol directe i un sòl ben drenat. És ideal per a paisatges xeròfics i és valorada per la seva bellesa ornamental i la seva capacitat per resistir condicions extremes de sequera.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
