--- a/src/pages/infoEspecimen/crancGegant.html
+++ b/src/pages/infoEspecimen/crancGegant.html
@@ -5,52 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cranc Gegant</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/invertebrats.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/invertebrats.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de invertebrats">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Cranc Gegant</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Cranc Gegant</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
-        <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://cdn0.bioenciclopedia.com/es/posts/9/7/7/cangrejo_gigante_japones_779_orig.jpg" alt="Cranc gegant" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://cdn0.bioenciclopedia.com/es/posts/9/7/7/cangrejo_gigante_japones_779_orig.jpg" alt="Cranc gegant" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
-        <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>Es un crustaci de la familia dels cenollos el qual el trobem al Japó i a l'oceà pacífic</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-water mr-2 text-gray-600"></i>Es un crustaci de la familia dels cenollos el qual el trobem al Japó i a l'oceà pacífic.</p>
+        </section>
 
-        <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Es el artròpode viu més gran, per longitud, del món i el qual viu en les profunditats del <span class="underline">Oceà Pacífic</span> i les costes de <span class="underline">Japó</span>.</p>
-        </div>
+        </section>
 
-        <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Pacific_Ocean_world_map.png/1200px-Pacific_Ocean_world_map.png" alt="Mapa del Pacífic" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Pacific_Ocean_world_map.png/1200px-Pacific_Ocean_world_map.png" alt="Mapa del Pacífic" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
-        <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-utensils mr-2 text-gray-600"></i>Dieta</h2>
             <p>La seva dieta tracta en peixos en descomposició, crustacis, invertebrats i algues.</p>
-        </div>
-    </div>
-</div>
+        </section>
+
+    </main>
+
+</body>
 </html>
