--- a/src/pages/infoEspecimen/dracDeKomodo.html
+++ b/src/pages/infoEspecimen/dracDeKomodo.html
@@ -5,51 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drac de Komodo</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/reptils.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/reptils.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de reptiles">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Drac de Komodo</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Drac de Komodo</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpiYAbgMMkkdOeKeUNAi_mJyrM7nfBqnXs7g&s" alt="Drac de Komodo" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpiYAbgMMkkdOeKeUNAi_mJyrM7nfBqnXs7g&s" alt="Drac de Komodo" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El drac de Komodo és el rèptil més gran del món, conegut per la seva ferocitat i les seves tècniques de caça. Aquest impressionant animal és un depredador alfa a la seva habitatge natural.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El drac de Komodo és el rèptil més gran del món, conegut per la seva ferocitat i les seves tècniques de caça. Aquest impressionant animal és un depredador alfa a la seva habitatge natural.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Els dracs de Komodo es troben principalment a les illes de Komodo, Rinca, Flores i Gili Motang a Indonèsia. Poden arribar a mesurar fins a 3 metres de llarg i pesar més de 70 kg. Són carnívors i utilitzen el seu verí, present a la seva saliva, per incapacitar a les seves preses, que inclouen cérvols, porcs i altres animals petits.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Map_of_Indonesian_Islands_komodo_dragons.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Map_of_Indonesian_Islands_komodo_dragons.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-utensils mr-2 text-gray-600"></i>Dieta</h2>
             <p>El drac de Komodo és carnívor i s'alimenta principalment de cérvols, porcs, cabres i altres animals petits. També consumeix carronya i pot menjar una gran quantitat de carn en una sola sessió.</p>
-        </div>
+        </section>
 
         <!-- Botó per enllaçar a una altra pàgina -->
         <div class="mt-4 text-center">
@@ -59,6 +57,8 @@
                 </button>
             </a>
         </div>
-    </div>
+        
+    </main>
+
 </body>
 </html>
