--- a/src/pages/infoEspecimen/droseraRegia.html
+++ b/src/pages/infoEspecimen/droseraRegia.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drosera Regia</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/pInsectivores.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/pInsectivores.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de plantas insectívoras">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Drosera Regia</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Drosera Regia</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/DroseraRegia.jpg/375px-DroseraRegia.jpg" alt="Drosera Regia" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/DroseraRegia.jpg/375px-DroseraRegia.jpg" alt="Drosera Regia" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La *Drosera regia*, també coneguda com la "Reina de les Droseras", és una planta carnívora endèmica de Sud-àfrica. És coneguda pels seus tentacles llargs i enganxosos que atrapen petits insectes, que són digerits per obtenir nutrients essencials.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La *Drosera regia*, també coneguda com la "Reina de les Droseras", és una planta carnívora endèmica de Sud-àfrica. És coneguda pels seus tentacles llargs i enganxosos que atrapen petits insectes, que són digerits per obtenir nutrients essencials.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>A diferència d'altres espècies de Drosera, la *Drosera regia* pot créixer fins a 60 cm d'alçada, amb fulles llargues i primes que s'enrosquen lleugerament per atrapar les preses. És una espècie molt valorada en el cultiu de plantes carnívores per la seva mida i el seu aspecte majestuós.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Map_of_Drosera_regia_distribution.png/800px-Map_of_Drosera_regia_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Map_of_Drosera_regia_distribution.png/800px-Map_of_Drosera_regia_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Cura i Importància</h2>
             <p>La *Drosera regia* necessita una alta humitat i un sòl àcid i ben drenat. Prefereix llum indirecta i un clima fresc per evitar el sobreescalfament de les arrels. Aquesta planta carnívora és única pel seu gran tamany i la seva capacitat de capturar i digerir insectes, fent-la una espècie fascinant tant per científics com per col·leccionistes.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
