--- a/src/pages/infoEspecimen/falcoPelegri.html
+++ b/src/pages/infoEspecimen/falcoPelegri.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Falcó Pelegrí</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/aus.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/aus.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de aus">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Falcó Pelegrí</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Falcó Pelegrí</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://wastemagazine.es/fotos2/falcoperegrinusbrookei1.jpg" alt="Falcó Pelegrí" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://wastemagazine.es/fotos2/falcoperegrinusbrookei1.jpg" alt="Falcó Pelegrí" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El falcó pelegrí és un ocell rapinyaire conegut per la seva velocitat i habilitat en el vol. És un dels ocells més ràpids del món, amb velocitats que poden superar els 300 km/h durant les seves caigudes.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El falcó pelegrí és un ocell rapinyaire conegut per la seva velocitat i habilitat en el vol. És un dels ocells més ràpids del món, amb velocitats que poden superar els 300 km/h durant les seves caigudes.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Originari de gairebé tots els continents, el falcó pelegrí és un depredador eficient que s'alimenta principalment d'aus. Utilitza la seva gran velocitat i la seva vista aguda per caçar les seves preses, sovint llançant-se en picat des de grans altures.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Peregrine_Falcon_distribution_map.png/800px-Peregrine_Falcon_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Peregrine_Falcon_distribution_map.png/800px-Peregrine_Falcon_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Dieta</h2>
             <p>El falcó pelegrí és carnívor i la seva dieta es compon principalment d'aus, incloent coloms, gavines i altres ocells petits. La seva tècnica de caça és ràpida i eficaç, aprofitant la seva velocitat per atrapar les preses en ple vol.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
