--- a/src/pages/infoEspecimen/florRatpenat.html
+++ b/src/pages/infoEspecimen/florRatpenat.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flor Ratpenat</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/pTrepadores.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/pTrepadores.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de trepadores">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Flor Ratpenat</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Flor Ratpenat</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://m.media-amazon.com/images/I/71PPcEEMC5L._AC_UF894,1000_QL80_.jpg" alt="Flor Ratpenat" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://m.media-amazon.com/images/I/71PPcEEMC5L._AC_UF894,1000_QL80_.jpg" alt="Flor Ratpenat" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La *Flor Ratpenat* (*Tacca chantrieri*) és una planta única coneguda per les seves flors de color negre o porpra fosc, amb bràctees que s'estenen com les ales d'un ratpenat. Aquesta planta és originària de les zones tropicals del sud-est asiàtic, com Tailàndia i Malàisia.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La *Flor Ratpenat* (*Tacca chantrieri*) és una planta única coneguda per les seves flors de color negre o porpra fosc, amb bràctees que s'estenen com les ales d'un ratpenat. Aquesta planta és originària de les zones tropicals del sud-est asiàtic, com Tailàndia i Malàisia.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Les flors de la *Tacca chantrieri* poden arribar a fer entre 30 i 35 cm de llarg i produeixen bràctees llargues i filiformes que recorden els bigotis d’un gat. Aquesta planta requereix un ambient càlid, humit i amb poca llum solar directa per créixer adequadament.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Map_of_Tacca_chantrieri_distribution.png/800px-Map_of_Tacca_chantrieri_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Map_of_Tacca_chantrieri_distribution.png/800px-Map_of_Tacca_chantrieri_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Cura i Importància</h2>
             <p>La *Flor Ratpenat* és una planta que requereix un ambient humit i temperat per prosperar. Prefereix sòls ben drenats i un reg regular, evitant l’excés d’aigua a les arrels. Ideal per a hivernacles o espais amb temperatura controlada, és molt valorada per la seva bellesa exòtica i la seva semblança única a un ratpenat.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
