--- a/src/pages/infoEspecimen/jadeEnfil.html
+++ b/src/pages/infoEspecimen/jadeEnfil.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jade Enfiladissa</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/pTrepadores.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/pTrepadores.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de trepadores">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Jade Enfiladissa</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Jade Enfiladissa</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Jade_vine_100_5025.JPG/375px-Jade_vine_100_5025.JPG" alt="Jade Enfiladissa" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Jade_vine_100_5025.JPG/375px-Jade_vine_100_5025.JPG" alt="Jade Enfiladissa" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La *Jade Enfiladissa* (*Strongylodon macrobotrys*) és una planta trepadora originària de les selves tropicals de Filipines. És coneguda per les seves flors exòtiques i penjants de color verd jade, que creixen en raïms espectaculars i poden arribar a fer fins a tres metres de llarg.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La *Jade Enfiladissa* (*Strongylodon macrobotrys*) és una planta trepadora originària de les selves tropicals de Filipines. És coneguda per les seves flors exòtiques i penjants de color verd jade, que creixen en raïms espectaculars i poden arribar a fer fins a tres metres de llarg.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>La *Strongylodon macrobotrys* pot arribar a fer fins a 18 metres d’alçada en el seu hàbitat natural. Les seves flors tenen una forma de garra distintiva i estan pol·linitzades per ratpenats. Aquesta planta requereix un clima càlid i humit per prosperar, i és una espècie molt preuada en jardins botànics per la seva bellesa exòtica.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Map_of_Strongylodon_macrobotrys_distribution.png/800px-Map_of_Strongylodon_macrobotrys_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Map_of_Strongylodon_macrobotrys_distribution.png/800px-Map_of_Strongylodon_macrobotrys_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Cura i Importància</h2>
             <p>Per cultivar la *Jade Enfiladissa*, es necessita un lloc amb llum indirecta i molta humitat. Aquesta planta és ideal per a hivernacles o jardins tropicals, on es pot controlar la temperatura i la humitat. Requereix un sòl ric i un reg constant, però sense entollar-se. Es recomana protegir-la de les temperatures baixes per evitar danys a les seves arrels i flors.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
