--- a/src/pages/infoEspecimen/lemurCuaAnillada.html
+++ b/src/pages/infoEspecimen/lemurCuaAnillada.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lèmur de Cua Anillada</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/mamifers.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/mamifers.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de mamífers">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Lèmur de Cua Anillada</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Lèmur de Cua Anillada</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Katta_8467.jpg" alt="Lèmur de Cua Anillada" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Katta_8467.jpg" alt="Lèmur de Cua Anillada" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El lèmur de cua anillada és un primat originari de Madagascar, conegut pel seu distintiu patró de cua amb ratlles blanques i negres. Són animals molt socials i viuen en grups familiars.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El lèmur de cua anillada és un primat originari de Madagascar, conegut pel seu distintiu patró de cua amb ratlles blanques i negres. Són animals molt socials i viuen en grups familiars.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Aquests lèmurs són reconeixibles pel seu pelatge gris fosc i la seva llarga cua. Són animals diürns que es desplacen principalment per terra i per les arbres, alimentant-se de fruits, fulles i insectes.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Ring-tailed_lemur_distribution_map.png/800px-Ring-tailed_lemur_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Ring-tailed_lemur_distribution_map.png/800px-Ring-tailed_lemur_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-utensils mr-2 text-gray-600"></i>Dieta</h2>
             <p>El lèmur de cua anillada és omnívor, alimentant-se principalment de fruites, fulles, flors i insectes. La seva dieta pot variar segons la disponibilitat d'aliments en el seu hàbitat natural.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
