--- a/src/pages/infoEspecimen/lithops.html
+++ b/src/pages/infoEspecimen/lithops.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lithops</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/pSuculentes.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/pSuculentes.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de suculentas">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Lithops</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Lithops</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/Lithops_salicola.jpg/911px-Lithops_salicola.jpg" alt="Lithops" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/Lithops_salicola.jpg/911px-Lithops_salicola.jpg" alt="Lithops" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>Els Lithops, també coneguts com a "pedres vives", són plantes suculentes que s'han adaptat a semblar-se a les roques del seu entorn per camuflar-se. Originàries de zones àrides del sud d'Àfrica, aquestes petites plantes són molt populars entre els aficionats a les suculentes.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Els Lithops, també coneguts com a "pedres vives", són plantes suculentes que s'han adaptat a semblar-se a les roques del seu entorn per camuflar-se. Originàries de zones àrides del sud d'Àfrica, aquestes petites plantes són molt populars entre els aficionats a les suculentes.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Els Lithops tenen un creixement lent i formen petites fulles carnoses dividides en dues meitats, que es desenvolupen a ras de terra. Durant la floració, produeixen petites flors blanques o grogues que surten del centre de les fulles. Són plantes extremadament resistents a la sequera i només necessiten regar-se molt ocasionalment.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Lithops_distribution_map.png/800px-Lithops_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Lithops_distribution_map.png/800px-Lithops_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-water mr-2 text-gray-600"></i>Cura i Importància</h2>
             <p>Els Lithops són ideals per a jardins de baix manteniment i col·leccions de suculentes per la seva resistència i l'aspecte únic. A causa de les seves necessitats de reg mínimes, són ideals per a zones seques o per a interiors amb molta llum. Es recomana un sòl ben drenat i un reg molt escàs per evitar el podriment.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
