--- a/src/pages/infoEspecimen/marchantiaPolymorpha.html
+++ b/src/pages/infoEspecimen/marchantiaPolymorpha.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marchantia polymorpha</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/ffmh.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/ffmh.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de plantas hepáticas">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Marchantia polymorpha</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Marchantia polymorpha</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/MarchantiaPolymorpha.jpg/375px-MarchantiaPolymorpha.jpg" alt="Marchantia polymorpha" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/MarchantiaPolymorpha.jpg/375px-MarchantiaPolymorpha.jpg" alt="Marchantia polymorpha" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La *Marchantia polymorpha* és una planta hepàtica que es troba en zones humides de tot el món. És reconeguda per la seva estructura en forma de làmina i la seva capacitat per reproduir-se a través de gemmes vegetatives anomenades "propàguls".</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La *Marchantia polymorpha* és una planta hepàtica que es troba en zones humides de tot el món. És reconeguda per la seva estructura en forma de làmina i la seva capacitat per reproduir-se a través de gemmes vegetatives anomenades "propàguls".</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
-            <p>Aquesta planta creix en sòls humits i ombrejats, on forma matolls denses que ajuden a la conservació de l'humitat del sòl. La *Marchantia polymorpha* pot reproduir-se de manera assexual mitjançant l'emissió de propàguls o de manera sexual a través de la producció de spores.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
+            <p>Aquesta planta creix en sòls humits i ombrejats, on forma matolls densos que ajuden a la conservació de l'humitat del sòl. La *Marchantia polymorpha* pot reproduir-se de manera assexual mitjançant l'emissió de propàguls o de manera sexual a través de la producció de spores.</p>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Marchantia_distribution_map.png/800px-Marchantia_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Marchantia_distribution_map.png/800px-Marchantia_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Cura i Importància</h2>
             <p>La *Marchantia polymorpha* és important per a la biodiversitat dels ecosistemes humits. Proporciona hàbitat per a petits organismes i ajuda a prevenir l'erosió del sòl. A més, la seva capacitat per retenir aigua la fa útil en la jardineria com a cobertura de sòl.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
