--- a/src/pages/infoEspecimen/medusaCabeleraDeLleo.html
+++ b/src/pages/infoEspecimen/medusaCabeleraDeLleo.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medusa cabellera de lleó</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/invertebrats.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/invertebrats.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de invertebrats">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Medusa cabellera de lleó</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Medusa cabellera de lleó</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzicaBDdDxDNbDCyP-BydkP2BLG8byk4IJ9Q&s" alt="Medusa cabellera de lleó" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzicaBDdDxDNbDCyP-BydkP2BLG8byk4IJ9Q&s" alt="Medusa cabellera de lleó" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La medusa cabellera de lleó és una de les meduses més grans del món, coneguda pel seu aspecte espectacular i les seves llargues tentacles.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La medusa cabellera de lleó és una de les meduses més grans del món, coneguda pel seu aspecte espectacular i les seves llargues tentacles.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
-            <p>La Cyanea capillata es troba principalment en aigües fredes de l'Atlàntic Nord i pot assolir diàmetres de fins a 2,5 metres, amb tentacles que poden mesurar fins a 30 metres.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
+            <p>La *Cyanea capillata* es troba principalment en aigües fredes de l'Atlàntic Nord i pot assolir diàmetres de fins a 2,5 metres, amb tentacles que poden mesurar fins a 30 metres.</p>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/North_Atlantic_Ocean_map.svg/1200px-North_Atlantic_Ocean_map.svg.png" alt="Mapa de l'Atlàntic" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/North_Atlantic_Ocean_map.svg/1200px-North_Atlantic_Ocean_map.svg.png" alt="Mapa de l'Atlàntic" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-fish mr-2 text-gray-600"></i>Dieta</h2>
             <p>La seva dieta inclou peixos petits, crustacis i altres invertebrats que captura amb els seus tentacles urticants.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
