--- a/src/pages/infoEspecimen/nepenthes.html
+++ b/src/pages/infoEspecimen/nepenthes.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nepenthes attenboroughii</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/pInsectivores.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/pInsectivores.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de plantes insectívores">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Nepenthes attenboroughii</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Nepenthes attenboroughii</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Attlwr.jpg" alt="Nepenthes attenboroughii" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Attlwr.jpg" alt="Nepenthes attenboroughii" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La *Nepenthes attenboroughii* és una planta carnívora endèmica de les muntanyes de Palawan, Filipines. Amb les seves impressionants fulles en forma de càntir, és capaç d’atrapar insectes i altres petits animals per extreure'n nutrients essencials.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La *Nepenthes attenboroughii* és una planta carnívora endèmica de les muntanyes de Palawan, Filipines. Amb les seves impressionants fulles en forma de càntir, és capaç d’atrapar insectes i altres petits animals per extreure'n nutrients essencials.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Aquesta planta va ser descoberta relativament recentment i destaca per la mida de les seves jarras, que poden arribar a contenir fins a 1,5 litres de líquid. La *Nepenthes attenboroughii* atrau les seves preses amb un nèctar dolç, que després cauen dins de la trampa on són digerits.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Map_of_Nepenthes_distribution.png/800px-Map_of_Nepenthes_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Map_of_Nepenthes_distribution.png/800px-Map_of_Nepenthes_distribution.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Cura i Importància</h2>
             <p>La *Nepenthes attenboroughii* requereix un ambient humit, amb sòl àcid i temperatures constants. És una planta difícil de conrear fora dels seus hàbitats nadius, però molt apreciada en col·leccions per la seva mida i la seva capacitat única d’atracció i captura de preses.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
