--- a/src/pages/infoEspecimen/peixLleo.html
+++ b/src/pages/infoEspecimen/peixLleo.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pez Lleó</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/peixos.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/peixos.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de peces">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Pez Lleó</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Pez Lleó</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIBQy_O5n53XEMF-wV2T0XFPxYi3Ddby2nZg&s" alt="Pez Lleó" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIBQy_O5n53XEMF-wV2T0XFPxYi3Ddby2nZg&s" alt="Pez Lleó" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El peix lleó és un peix marí conegut per les seves espines venenoses i el seu aspecte espectacular. Originari de l'oceà Índic i el Pacífic, s'ha convertit en una espècie invasora a les aigües del Mar Carib i la costa est dels Estats Units.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El peix lleó és un peix marí conegut per les seves espines venenoses i el seu aspecte espectacular. Originari de l'oceà Índic i el Pacífic, s'ha convertit en una espècie invasora a les aigües del Mar Carib i la costa est dels Estats Units.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>El peix lleó és reconeixible per les seves llargues aletes i el seu patró de colors vius, que va del vermell al marró i al blanc. Prefereix les zones de coral i els fons marins rocosos, on es camufla bé. La seva picada pot ser molt dolorosa, però no és mortal per als humans.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Pterois_volitans_distribution_map.png/800px-Pterois_volitans_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Pterois_volitans_distribution_map.png/800px-Pterois_volitans_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Dieta</h2>
             <p>El peix lleó és carnívor i s'alimenta principalment de peixos més petits i crustacis. Utilitza les seves espines per defensar-se i atraure les seves preses.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
