--- a/src/pages/infoEspecimen/porcEspi.html
+++ b/src/pages/infoEspecimen/porcEspi.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puerco Espín</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/mamifers.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/mamifers.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de mamíferos">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Puerco Espín</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Puerco Espín</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hystrix_cristata_03_by_Line1.jpg/330px-Hystrix_cristata_03_by_Line1.jpg" alt="Puerco Espín" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hystrix_cristata_03_by_Line1.jpg/330px-Hystrix_cristata_03_by_Line1.jpg" alt="Puerco Espín" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El puerco espín és un rosegador gran conegut pels seus pèls punxents i la seva capacitat de defensar-se dels depredadors. Es troba principalment a les regions forestals i de matolls d'Àfrica i Àsia.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El puerco espín és un rosegador gran conegut pels seus pèls punxents i la seva capacitat de defensar-se dels depredadors. Es troba principalment a les regions forestals i de matolls d'Àfrica i Àsia.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Els puerco espins són animals nocturns que es caracteritzen per la seva dieta herbívora, alimentant-se principalment de fulles, branques i escorça. Poden arribar a fer fins a 80 cm de longitud i pesar fins a 20 kg.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Distribution_map_of_Hystrix.png/800px-Distribution_map_of_Hystrix.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Distribution_map_of_Hystrix.png/800px-Distribution_map_of_Hystrix.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Dieta</h2>
             <p>El puerco espín és herbívor i s'alimenta de fulles, fruits, branques i escorça. Utilitza els seus dents afilades per menjar i és capaç de fer una gran varietat de sons per comunicar-se amb altres individus.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
