--- a/src/pages/infoEspecimen/proteaRei.html
+++ b/src/pages/infoEspecimen/proteaRei.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Protea Rei</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/arbustos.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/arbustos.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de arbustos">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Protea Rei</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Protea Rei</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de la planta -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Protea_cynaroides_5.jpg/375px-Protea_cynaroides_5.jpg" alt="Protea Rei" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Protea_cynaroides_5.jpg/375px-Protea_cynaroides_5.jpg" alt="Protea Rei" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La Protea Rei (Protea cynaroides) és una planta ornamental originària de Sud-àfrica, coneguda per les seves espectaculars flors de color rosa i verd. És un símbol de la biodiversitat del país i forma part de la família de les Proteàcies.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La Protea Rei (Protea cynaroides) és una planta ornamental originària de Sud-àfrica, coneguda per les seves espectaculars flors de color rosa i verd. És un símbol de la biodiversitat del país i forma part de la família de les Proteàcies.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Aquesta planta pot arribar a una altura de fins a 2 metres. Les flors, que són en realitat un grup de flors petites, estan agrupades en una inflorescència gran que pot mesurar fins a 25 cm de diàmetre. Floren a la primavera i l'estiu, atraient diversos pol·linitzadors.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Protea_cynaroides_distribution_map.png/800px-Protea_cynaroides_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Protea_cynaroides_distribution_map.png/800px-Protea_cynaroides_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Ús i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Ús i Importància</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Ús i Importància</h2>
             <p>La Protea Rei és molt valorada en jardineria i disseny paisatgístic. També és utilitzada en arranjaments florals per la seva aparença única. A més, forma part de l'ecosistema local, proporcionant habitatge i aliment a diverses espècies d'animals.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
