--- a/src/pages/infoEspecimen/quetzal.html
+++ b/src/pages/infoEspecimen/quetzal.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quetzal</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/aus.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/aus.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de aves">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Quetzal</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Quetzal</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Quetzal01.jpg/375px-Quetzal01.jpg" alt="Quetzal" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Quetzal01.jpg/375px-Quetzal01.jpg" alt="Quetzal" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El quetzal és un ocell de colors vius, conegut per la seva ploma llarga i brillant, especialment en els mascles. És un símbol de llibertat i bellesa en moltes cultures d'Amèrica Central.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El quetzal és un ocell de colors vius, conegut per la seva ploma llarga i brillant, especialment en els mascles. És un símbol de llibertat i bellesa en moltes cultures d'Amèrica Central.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>El quetzal és originari de les selves d'Amèrica Central, especialment a Guatemala i el sud de Mèxic. Aquesta espècie es caracteritza per la seva habilitat per viure en boscos humits i densos. Els mascles són reconeixibles per les seves plomes llargues i el seu color brillant, mentre que les femelles tenen colors més apagats.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Distribution_map_of_the_quetzal.png/800px-Distribution_map_of_the_quetzal.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Distribution_map_of_the_quetzal.png/800px-Distribution_map_of_the_quetzal.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Dieta</h2>
             <p>El quetzal és un ocell omnívor que s'alimenta principalment de fruites, insectes i petits animals. La seva dieta varia segons l'hàbitat, però sovint inclou fruits de palmeres i altres plantes de la selva.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
