--- a/src/pages/infoEspecimen/salamandraDeSirena.html
+++ b/src/pages/infoEspecimen/salamandraDeSirena.html
@@ -5,51 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salamandra de Sirena</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Main title -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/anfibis.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+
+    <!-- Títol principal -->
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/anfibis.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de anfibios">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Salamandra de Sirena</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Salamandra de Sirena</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge de l'animal -->
-        <div class="flex justify-center mt-4">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzwjjQE82BHUJ_9yk401TjvBHLdbjx3PwmPg&s" alt="Salamandra de Sirena" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzwjjQE82BHUJ_9yk401TjvBHLdbjx3PwmPg&s" alt="Salamandra de Sirena" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>La salamandra de sirena és un gran amfibi aquàtic conegut per la seva aparença única i les seves capacitats de regeneració. Aquestes salamandres són un dels més grans amfibis del món.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>La salamandra de sirena és un gran amfibi aquàtic conegut per la seva aparença única i les seves capacitats de regeneració. Aquestes salamandres són un dels més grans amfibis del món.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
             <p>Originària d'Amèrica del Nord, la salamandra de sirena habita en rius i llacs de corrent lent. Té un cos allargat i pot perdre extremitats o fins i tot part del cor i regenerar-les. La seva pell és llisa i molt vascularitzada, la qual cosa li permet respirar a través de la pell.</p>
-        </div>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Map_of_Cryptobranchus_alleganiensis_alleganiensis.png/800px-Map_of_Cryptobranchus_alleganiensis_alleganiensis.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Map_of_Cryptobranchus_alleganiensis_alleganiensis.png/800px-Map_of_Cryptobranchus_alleganiensis_alleganiensis.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Dieta -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Dieta</h2>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Dieta</h2>
             <p>La salamandra de sirena és carnívora i s'alimenta principalment de peixos, crustacis i altres invertebrats aquàtics que troba al seu entorn.</p>
-        </div>
-    </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
