--- a/src/pages/infoEspecimen/sphagnum.html
+++ b/src/pages/infoEspecimen/sphagnum.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sphagnum magellanicum</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
+
     <!-- Títol principal -->
-    <div class="bg-tertiary text-white text-center py-4">
-        <a href="../seleccioEspecimens/ffmh.html"
-            class="absolute top-4 left-4 text-lime-200 text-2xl">
+    <header class="bg-tertiary text-white text-center py-4 relative">
+        <a href="../seleccioEspecimens/ffmh.html" class="absolute top-4 left-4 text-lime-200 text-2xl" aria-label="Volver a la selección de musgos">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Sphagnum magellanicum</h1>
-    </div>
+        <h1 class="text-3xl font-bold mt-2">Sphagnum magellanicum</h1>
+    </header>
 
-    <div class="p-4">
+    <main class="p-4 max-w-3xl mx-auto">
 
         <!-- Imatge del musgo -->
-        <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Sphagnum_magellanicum.jpeg/405px-Sphagnum_magellanicum.jpeg" alt="Sphagnum magellanicum" class="w-64 h-64 object-cover">
-        </div>
+        <section class="flex justify-center mt-6 mb-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Sphagnum_magellanicum.jpeg/405px-Sphagnum_magellanicum.jpeg" alt="Sphagnum magellanicum" class="w-64 h-64 object-cover rounded-lg shadow-lg border border-gray-300">
+        </section>
 
         <!-- Descripció general -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <p>El *Sphagnum magellanicum* és una espècie de musgo que creix principalment en zones humides, com les turberes. És conegut per la seva capacitat per retenir aigua, el que el fa essencial per la formació de turba i per mantenir l'ecosistema dels aiguamolls.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <p class="text-lg"><i class="fas fa-info-circle mr-2 text-gray-600"></i>El <em>Sphagnum magellanicum</em> és una espècie de musgo que creix principalment en zones humides, com les turberes. És conegut per la seva capacitat per retenir aigua, el que el fa essencial per la formació de turba i per mantenir l'ecosistema dels aiguamolls.</p>
+        </section>
 
         <!-- Informació detallada -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Info Detallada</h2>
-            <p>Aquest musgo forma grans matollars que poden acumular grans quantitats d'aigua, la qual cosa crea un hàbitat ideal per a moltes espècies d'animals i plantes. A més, el *Sphagnum magellanicum* és capaç de capturar carboni, ajudant a mitigar el canvi climàtic.</p>
-        </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-info-circle mr-2 text-gray-600"></i>Info Detallada</h2>
+            <p>Aquest musgo forma grans matollars que poden acumular grans quantitats d'aigua, la qual cosa crea un hàbitat ideal per a moltes espècies d'animals i plantes. A més, el <em>Sphagnum magellanicum</em> és capaç de capturar carboni, ajudant a mitigar el canvi climàtic.</p>
+        </section>
 
         <!-- Mapa de localització -->
-        <div class="mt-4 text-center">
-            <h2 class="text-lg font-bold">Localització</h2>
+        <section class="mt-6 text-center mb-6">
+            <h2 class="text-xl font-bold"><i class="fas fa-map-marker-alt mr-2 text-gray-600"></i>Localització</h2>
             <div class="flex justify-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Sphagnum_distribution_map.png/800px-Sphagnum_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Sphagnum_distribution_map.png/800px-Sphagnum_distribution_map.png" alt="Mapa de localització" class="w-64 h-32 object-cover border rounded-lg shadow">
             </div>
-        </div>
+        </section>
 
         <!-- Cura i importància -->
-        <div class="mt-4 text-center bg-green-100 p-4 text-gray-700">
-            <h2 class="text-lg font-bold">Cura i Importància</h2>
-            <p>El *Sphagnum magellanicum* és crucial per a la salut dels ecosistemes humits. Ajuda a mantenir l'aigua al sòl i proporciona un hàbitat per a diverses espècies. A més, s'utilitza en jardineria per la seva capacitat d'absorció d'aigua i en la fabricació de turba per a plantes.</p>
-        </div>
-    </div>
+        <section class="mt-4 text-center bg-green-100 p-6 text-gray-700 rounded-lg shadow border border-green-200">
+            <h2 class="text-xl font-bold"><i class="fas fa-leaf mr-2 text-gray-600"></i>Cura i Importància</h2>
+            <p>El <em>Sphagnum magellanicum</em> és crucial per a la salut dels ecosistemes humits. Ajuda a mantenir l'aigua al sòl i proporciona un hàbitat per a diverses espècies. A més, s'utilitza en jardineria per la seva capacitat d'absorció d'aigua i en la fabricació de turba per a plantes.</p>
+        </section>
+
+    </main>
+
 </body>
 </html>
