--- a/src/pages/paginaRedireccions.html
+++ b/src/pages/paginaRedireccions.html
@@ -5,34 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoVerse</title>
-    <link rel="stylesheet" href="/src/css/main.css" />
-    <!-- Add Font Awesome for icons -->
+
+    <!-- Main CSS File -->
+    <link rel="stylesheet" href="/src/css/main.css">
+    <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body class="bg-gray-100 min-h-screen flex flex-col justify-between">
-    <div class="bg-tertiary text-center py-4 relative">
-        <!-- Main Title (side-to-side, top of the page) -->
-        <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold text-secondary1">EcoVerse</h1>
-        <!-- Logout Icon -->
-        <a href="/public/index.html" class="absolute top-4 right-4 text-secondary1 text-2xl">
-            <i class="fas fa-sign-out-alt"></i>
+<body class="bg-primary min-h-screen flex flex-col justify-between text-gray">
+    <!-- Header Section -->
+    <header class="bg-tertiary text-center py-6 relative rounded-b-3xl shadow-lg">
+        <h1 class="text-5xl font-bold text-secondary1" style="font-family: 'Comic Sans MS', sans-serif;">EcoVerse</h1>
+        <!-- Logout Button -->
+        <a href="/public/index.html" class="absolute top-4 right-4 text-secondary1 text-3xl" aria-label="Logout">
+            <i class="fas fa-door-open"></i>
         </a>
-    </div>
+    </header>
 
-    <!-- Main Content -->
-    <div class="flex-1 flex flex-col justify-center space-y-4 sm:space-y-6 px-4 mt-8">
-        <!-- Buttons -->
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary2 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./infoApp.html">InfoApp</a></button>
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary2 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./ecosostenibilitat.html">Habits ecosostenibles</a></button>
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary1 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./plantes.html">Flora</a></button>
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary1 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./animals.html">Fauna</a></button>
-    </div>
+    <!-- Main Content Section -->
+    <main class="flex-1 flex flex-col justify-center items-center space-y-6 px-4 mt-8">
+        <!-- Buttons for Different Sections -->
+        <a href="./infoApp.html" class="w-3/4 mx-auto">
+            <button class="w-full py-4 bg-secondary2 text-xl text-negre font-bold rounded-full shadow-lg">
+                <i class="fas fa-info-circle mr-2"></i> InfoApp
+            </button>
+        </a>
+        <a href="./ecosostenibilitat.html" class="w-3/4 mx-auto">
+            <button class="w-full py-4 bg-secondary2 text-xl text-negre font-bold rounded-full shadow-lg">
+                <i class="fas fa-leaf mr-2"></i> Hábitos Ecosostenibles
+            </button>
+        </a>
+        <a href="./plantes.html" class="w-3/4 mx-auto">
+            <button class="w-full py-4 bg-secondary1 text-xl text-negre font-bold rounded-full shadow-lg">
+                <i class="fas fa-seedling mr-2"></i> Flora
+            </button>
+        </a>
+        <a href="./animals.html" class="w-3/4 mx-auto">
+            <button class="w-full py-4 bg-secondary1 text-xl text-negre font-bold rounded-full shadow-lg">
+                <i class="fas fa-paw mr-2"></i> Fauna
+            </button>
+        </a>
+    </main>
 
-    <!-- Trivia Button (with some space from the base of the page) -->
-    <div class="px-4 mb-4 sm:mb-6">
-        <button class="w-full py-4 sm:py-5 bg-yellow-200 text-xl sm:text-5xl md:text-3xl lg:text-4xl font-bold rounded-xl"><a href="./trivia.html">Trivia</a></button>
-    </div>
+    <!-- Trivia Button Section -->
+    <footer class="px-4 mb-6">
+        <a href="./trivia.html">
+            <button class="w-full py-5 bg-yellow-200 text-2xl text-negre font-bold rounded-full shadow-lg">
+                🎉 Trivia 🎉
+            </button>
+        </a>
+    </footer>
 </body>
 
 </html>
