--- a/src/pages/seleccioEspecimens/mamifers.html
+++ b/src/pages/seleccioEspecimens/mamifers.html
@@ -23,7 +23,7 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hystrix_cristata_03_by_Line1.jpg/330px-Hystrix_cristata_03_by_Line1.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Porc espí</h2>
                 <a href="../infoEspecimen/porcEspi.html">
@@ -35,7 +35,7 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbKbRouYuYgHx3Dx1SCL4FzIio9cmRT9lTeA&s" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Orangutá</h2>
                 <a href="../infoEspecimen/oranguta.html">
@@ -47,7 +47,7 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Katta_8467.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Lémur de cua anillada</h2>
                 <a href="../infoEspecimen/lemurCuaAnillada.html">
